Agregué city skyline

--- a/1-responsive-web-design/j-my-tribute-page/index.html
+++ b/1-responsive-web-design/j-my-tribute-page/index.html
@@ -14,9 +14,9 @@
     <nav>
       <h1>Eva Perón</h1>
       <ul>
-        <li><a href="#bio" target="_top">Biography</a></li>
-        <li><a href="#pictures">Pictures</a></li>
-        <li><a href="#highlights">Highlights</a></li>
+        <li><a class="nav-link" href="#bio">Biography</a></li>
+        <li><a class="nav-link" href="#pictures">Pictures</a></li>
+        <li><a class="nav-link" href="#highlights">Highlights</a></li>
       </ul>
     </nav>
   </header>
@@ -68,7 +68,9 @@
               </ul>
             </div>
             <div class="speech">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/Dr7ymWtnHWc?start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Dr7ymWtnHWc?start=7" title="YouTube video player" 
+              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen></iframe>
             </div>
           </div>
         </section>
